--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>blendF<span>.</span>CounterStrike</h1>
+        <h1>blendF<span>.</span>CStrike<span>.</span>cfg</h1>
       </a>
       <nav id="navbar" class="navbar">
         <ul>
