--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>blendF<span>.</span>CStrike<span>.</span>cfg</h1>
+        <h1>blendF<span>.</span>CS:GO<span>.</span>cfg</h1>
       </a>
       <nav id="navbar" class="navbar">
         <ul>
@@ -95,7 +95,6 @@
         <div class="swiper-wrapper align-items-center">
           <div class="swiper-slide"><img src="assets/img/client-1.png" class="img-fluid" alt=""></div>
           <div class="swiper-slide"><img src="assets/img/client-2.png" class="img-fluid" alt=""></div>
-          <div class="swiper-slide"><img src="assets/img/client-3.png" class="img-fluid" alt=""></div>
           <div class="swiper-slide"><img src="assets/img/client-4.png" class="img-fluid" alt=""></div>
           <div class="swiper-slide"><img src="assets/img/client-5.png" class="img-fluid" alt=""></div>
         </div>
